Return whether initial node in rest api
